<resources>
    <string name="app_name">TreBirthAssignment</string>
    <string name="enter_your_name">Enter your name ...</string>
    <string name="enter_your_age">Enter your age ...</string>
    <string name="enter_number1">Enter number1 ...</string>
    <string name="enter_number2">Enter number2 ...</string>
    <string name="product">Product</string>
    <string name="assignment_for_trebirth">Assignment for TreBirth</string>
    <string name="back">Back</string>
</resources>