<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assignment_for_trebirth"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">
    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:minWidth="310dp"
        android:layout_height="48dp"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:autofillHints="UserName" />
    <EditText
        android:id="@+id/userAge"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:minWidth="310dp"
        android:hint="@string/enter_your_age"
        android:inputType="number"
        android:autofillHints="Age" />
    <EditText
        android:id="@+id/number1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:minWidth="310dp"
        android:hint="@string/enter_number1"
        android:inputType="numberSigned"
        android:autofillHints="Number" />
    <EditText
        android:id="@+id/number2"
        android:layout_width="wrap_content"
        android:minWidth="310dp"
        android:layout_height="48dp"
        android:hint="@string/enter_number2"
        android:inputType="numberSigned"
        android:autofillHints="Number" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

    <Button
        android:id="@+id/productButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product"
        android:onClick="submitProduct"/>
    </LinearLayout>
  </LinearLayout>